--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,11 @@
       "src": "index.js",
       "use": "@now/node"
     }
+  ],
+  "routes": [
+    {
+      "src": "/routes/alerts",
+      "dest": "index.js"
+    }
   ]
 }
