--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "rest-api-express-without-database",
+  "name": "gitlab-alerts",
   "version": "1.0.0",
   "description": "Projeto simples para rodar uma API com mock de dados.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "serverless deploy"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,8 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "serverless-http": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
