--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
+    "promise": "^8.1.0",
     "request": "^2.88.2",
     "serverless-http": "^3.0.1"
   },
